# Project_Bowerman

./: .gitignore  README.md  main.py  pyproject.toml
backend/: api.py  llm_strategy.py
data/dev_data/: UMBC_f_performances.json  UMBC_f_performances_context.txt
data/dummy_data/: dummy_athlete_data.txt  dummy_context.txt  mock_athlete_data.json
frontend/: app.py
